--- a/estilo/style.css
+++ b/estilo/style.css
@@ -14,3 +14,10 @@ main {
     padding: 10px;
     box-shadow: 3px 3px 5px rgb(0, 0, 0);
 }
+
+img.lado{
+
+    width: 100px;;
+    height: 100px;;
+    float:inline-end;
+}
